# 2dracer-kiro

./: .gitignore  README.md  demo_black_mamba_renderer.py  demo_car_entity.py  demo_car_input_integration.py  demo_car_physics.py  demo_input_manager.py  demo_physics_engine.py  pyproject.toml
.kiro/specs/retro-racing-game/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: README.md  architecture.md  car-entity.md  car-physics.md
src/: __init__.py  main.py
src/ai/: __init__.py
src/audio/: __init__.py
src/core/: __init__.py  event_system.py  game_engine.py  scene_manager.py
src/editor/: __init__.py
src/entities/: __init__.py  car.py
src/input/: __init__.py  controls.py  input_manager.py
src/physics/: __init__.py  car_physics.py  physics_engine.py
src/rendering/: __init__.py  black_mamba_renderer.py
src/ui/: __init__.py
tests/: test_black_mamba_renderer.py  test_car.py  test_car_physics.py  test_input_manager.py  test_main.py  test_physics_engine.py
